--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -55,6 +55,7 @@ a.list-active{
 }
 .question-dec{
     font-size: 18px;
+    margin: 20px 0;
 }
 .jumbotron{
     margin: 50px;
@@ -69,4 +70,61 @@ a.list-active{
 .btn-return:focus, .btn-return:hover {
     color: #ffffff;
     background-color: #507ebc;
+}
+.comm_pic{
+    width: 40px;
+    height: 40px;
+}
+.media-span{
+    padding-top: 10px;
+}
+.comm_icon{
+    background-color: #f2f2f2;
+    padding: 7px 10px;
+    font-size: 18px;
+    cursor: pointer;
+    height: 30px;
+}
+.comm_icon:focus,.comm_icon:hover{
+    color: #ffffff;
+    background-color: #2aabd2;
+}
+.comm_font{
+    color: #757575;
+}
+.comm_icon_left{
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-right: #cdcdcd 1px solid;
+}
+.comm_icon_right{
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+.comm_badge{
+    position: relative;
+    left: -6px;
+    top: -4px;
+    font-size: 12px;
+}
+.comm_comm_like{
+    border-radius: 8px;
+    font-size: 14px;
+    position: relative;
+    left: 55px;
+    top: 0;
+}
+.comm_comm_badge{
+    position: relative;
+    left: -6px;
+    top: 2px;
+    font-size: 10px;
+}
+.likeList{
+    font-size: 20px;
+    color: #2aabd2;
+}
+.likeList:focus,.likeList:hover{
+    font-size: 22px;
+    color: #8f8f8f;
 }
