--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -32,7 +32,7 @@
                 <div class="form-group">
                     <label for="tag">添加标签</label>
                     <input class="form-control" id="tag" name="tag" cols="30" rows="10" th:value="${tag}"
-                           placeholder="输入标题，以，隔开">
+                           placeholder="输入标题，以 '、' 隔开">
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
@@ -40,7 +40,7 @@
                         <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"
                              th:if="${error != null}">
                         </div>
-                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 btn-publish">
+                        <div class="btn-publish">
                             <button type="submit" class="btn btn-success btn-lg">发&nbsp;&nbsp;布</button>
                         </div>
                     </div>
@@ -49,10 +49,10 @@
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>问题发起指南</h3>
+            <h3>问题发起指南</h3><br>
             • 问题标题: 请用精简的语言描述您发布的问题，不超过25字 <br><br>
             • 问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料<br><br>
-            • 选择标签: 选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
+            • 选择标签: 选择一个或者多个合适的标签，用顿号隔开，每个标签不超过10个字<br>
         </div>
     </div>
 </div>
