--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -53,7 +53,7 @@
                 <div class="form-group">
                     <label for="tag">添加标签</label>
                     <input class="form-control" id="tag" name="tag" cols="30" rows="10" th:value="${tag}"
-                           autocomplete="off" placeholder="输入标题，以 '、' 隔开"  onfocus="showTagList()">
+                           autocomplete="off" placeholder="点击选择标签，或者输入标签，以 '、' 隔开"  onfocus="showTagList()">
                     <br>
                     <div id="tag_list" hidden>
                         <ul class="nav nav-tabs" role="tablist">
@@ -98,7 +98,7 @@
             <h3>问题发起指南</h3><br>
             • 问题标题: 请用精简的语言描述您发布的问题，不超过25字 <br><br>
             • 问题补充: 详细补充您的问题内容，并确保问题描述清晰直观, 并提供一些相关的资料<br><br>
-            • 选择标签: 选择一个或者多个合适的标签，用顿号隔开，每个标签不超过10个字<br>
+            • 选择标签: 选择一个或者多个合适的标签，用顿号隔开（只可选择已有的标签）<br>
         </div>
         <div th:replace="~{navigation :: footer}"></div>
     </div>
