--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -89,7 +89,7 @@
             </nav>
         </div>
 
-        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 hidden-xs hidden-sm">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group my-list">
                 <a href="/profile/question"  th:class="${section == 'question'} ? 'list-group-item list-active' : 'list-group-item'">我的问题</a>
                 <a href="/profile/replies"  th:class="${section == 'replies'} ? 'list-group-item list-active' : 'list-group-item'">
