--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -39,7 +39,7 @@
             </span>
             <hr>
             <!--内容-->
-            <div id="question-view" class="question-dec col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs hidden-sm">
+            <div id="question-view" class="question-dec col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <textarea th:text="${question.description}" style="display:none;"></textarea>
             </div>
             <script type="text/javascript">
@@ -146,8 +146,8 @@
             </div>
         </div>
 
-        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 hidden-xs hidden-sm">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs hidden-sm">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                 <h3>发起人</h3>
                 <br>
                 <div class="media-left">
@@ -158,8 +158,8 @@
                     <h3 class="media-heading" th:text="${question.user.name}"></h3>
                 </div>
             </div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs hidden-sm">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs hidden-sm">
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3>相关问题</h3>
                 <br>
                 <div class="media"  th:each="qq : ${likeQlist}">
