--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,25 +32,25 @@
             <nav aria-label="Page navigation" class="page-right">
                 <ul class="pagination">
                     <li th:if="${questionPage.showFirstPage}">
-                        <a th:href="@{/(page = 1)}">
+                        <a th:href="@{/(page = 1,search =${searchkw} , tag = ${tagkw})}">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${questionPage.showPrevious}">
-                        <a th:href="@{/(page = ${questionPage.page} - 1)}">
+                        <a th:href="@{/(page = ${questionPage.page} - 1,search =${searchkw} , tag = ${tagkw})}">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li  th:each="page : ${questionPage.pages}" th:class="${questionPage.page == page}  ? 'active' : '' ">
-                        <a th:href="@{/(page = ${page})}" th:text="${page}"></a>
+                        <a th:href="@{/(page = ${page},search =${searchkw}, tag = ${tagkw})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${questionPage.showNext}">
-                        <a th:href="@{/(page = ${questionPage.page} + 1)}">
+                        <a th:href="@{/(page = ${questionPage.page} + 1,search =${searchkw}, tag = ${tagkw})}">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${questionPage.showEndPage}">
-                        <a th:href="@{/(page = ${questionPage.totlePage})}">
+                        <a th:href="@{/(page = ${questionPage.totlePage},search =${searchkw}, tag = ${tagkw})}">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
                     </li>
@@ -59,13 +59,18 @@
         </div>
 
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 hidden-xs hidde  n-sm">
-            <h3>热点话题</h3>
+            <h3>热点标签</h3>
             <br>
-            <div class="media"  th:each="qq : ${hotList}">
+            <!--<div class="media"  th:each="qq : ${hotList}">
                 <a class="likeList" th:href="@{'/question/' + ${qq.id} +'/0'} ">
                     · <span th:text="${qq.title}"></span>
                 </a>
-            </div>
+            </div>-->
+            <ul>
+                <li th:each="tag : ${tags}">
+                    <a class="likeList" th:href="@{/(page=1,search =${searchkw},tag=${tag})}" th:text="${tag}"></a>
+                </li>
+            </ul>
         </div>
 
         <div th:replace="~{navigation :: footer}"></div>
