--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,11 +38,18 @@
         <div class="form-group">
             <div class="text-center">
                 <label>
+                    <!--本地 url-->
                     <a href="https://github.com/login/oauth/authorize?client_id=ae08bb7288c532dbaf78
                 &redirect_uri=http://localhost:8080/callback&scope=user&state=1">
                         <img id="github-img" src="https://github.githubassets.com/favicons/favicon.png">
                         Github 登录
                     </a>
+                    <!--服务器 url-->
+                    <!--<a href="https://github.com/login/oauth/authorize?client_id=d85ef952e55a5e761214
+                &redirect_uri=http://114.215.208.150:8080/callback&scope=user&state=1">
+                        <img id="github-img" src="https://github.githubassets.com/favicons/favicon.png">
+                        Github 登录
+                    </a>-->
                 </label>
             </div>
         </div>
