--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>strive-社区</title>
+    <title>CODE-社区</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
@@ -23,7 +23,7 @@
 <body>
 <div th:replace="~{navigation :: nav}"></div>
 <div class="container-fluid main">
-    <div class="row">
+    <div class="row bgtouming" >
         <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 left_boder">
             <h2><span class="glyphicon glyphicon-list faqi_pic" aria-hidden="true"></span>发起</h2>
             <hr>
