--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -35,7 +35,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">个人中心</a></li>
+                            <li><a href="/self">个人中心</a></li>
                             <li><a href="/profile/question">我的问题</a></li>
                             <li><a href="/logout">退出登录</a></li>
                         </ul>
