--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -14,6 +14,7 @@
                 <br>
 <!--                <span th:text="${#strings.abbreviate(question.description,40)}"></span><br>-->
                 <span th:text="${question.commentCount}"></span>个回复 ·
+                <span th:text="${question.likeCount}"></span>个点赞 ·
                 <span th:text="${question.viewCount}"></span>次浏览 ·
 <!--                <span th:text="${question.likeCount}"></span> 点赞 ·-->
                 <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd')}"></span>
